# ShopSense-Computer-Vision

./: .gitignore  Opencv+Pytorch.txt  test.ipynb
Build-Model/: Layers.cpp  Layers.hpp  Yolo.cpp  Yolo.hpp
OpenCV/: CMakeLists.txt  Tracker.cpp  Tracker.hpp  track.cpp
Test/: CMakeLists.txt  test.cpp
Tracking/: CMakeLists.txt  Tracker.cpp  track.cpp
Ultralytics/: CMakeCache.txt  CMakeLists.txt  Inference.cpp  Inference.hpp  Makefile  Track  cmake_install.cmake  track.cpp
